Change signUp text, and fixed login layout problem.

--- a/css/login.css
+++ b/css/login.css
@@ -18,7 +18,7 @@ header .bottom a {
 }
 
 .content .title {
-  padding: 26px 0;
+  padding: 18px 0 0;
   background-color: #eee;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -54,6 +54,11 @@ fieldset .flex.forget {
   input, .confirm {
     width: 80%;
   }
+
+  #main {
+    padding: 0;
+    margin-top: 0;
+  }
 }
 
 @media(max-width:450px) {
@@ -63,5 +68,11 @@ fieldset .flex.forget {
 
   label {
     width: 20%;
+  }
+}
+
+@media(max-width:375px) {
+  #main {
+    margin-top: 33px;
   }
 }
